--- a/footer.html
+++ b/footer.html
@@ -1,21 +1,177 @@
-<!-- Bootstrap JavaScript Libraries -->
-	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
-	<script>
-		$("li").hover(
-			function() {
-				$(this).find("span").stop().animate({
-					width: "100%",
-					opacity: "1",
-				}, 400, function() {})
-			},
-			function() {
-				$(this).find("span").stop().animate({
-					width: "0%",
-					opacity: "0",
-				}, 400, function() {})
-			}
-		);
-	</script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Footer</title>
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="/icet/assets/css/footer.css">
+</head>
+
+<body>
+
+
+    <footer class="bg-light pt-5 mt-5 position-relative" style="margin-bottom:-100px; ">
+
+        <!-- this shows on dekstop screens -->
+        <div
+            class="d-none d-sm-none d-md-block d-flex justify-content-center container text-white col-9 position-absolute top-0 start-50 translate-middle">
+            <div class="row">
+                <div class="row rounded-start-4 color-blue py-3 col-4">
+                    <img class="d-md-none d-lg-block big-icon col-md-3 col-lg-3 "
+                        src="/icet/assets/img/favicon/icons8-call-100.png" alt="">
+                    <div class=" col-md-12 col-lg-8">
+                        <h6 class="lead pt-1 mb-0">PHONE</h6>
+                            <h5 class="mt-1 mb-0 ">075 805 805</h5>
+                    </div>
+                </div>
+                <div class="row color-green py-3 col-4">
+                    <img class="d-md-none d-lg-block big-icon col-4"
+                        src="/icet/assets/img/favicon/icons8-mail-100.png" alt="">
+                    <div class="col-sm-12 col-md-12 col-lg-8">
+                        <h6 class="lead pt-1 mb-0">EMAIL</h6>
+                        <h4 class="mt-1 mb-0">info@icet.lk</h4>
+                    </div>
+                </div>
+                <div class="row rounded-end-4 color-blue py-3 col-4">
+                    <img class="d-md-none d-lg-block big-icon col-4"
+                        src="/icet/assets/img/favicon/icons8-location-96.png" alt="">
+                    <div class="col-md-12 col-lg-8">
+                        <h6 class="lead small pt-1 mb-0">LOCATION</h6>
+                        <h6 class="mt-1 mb-0">223 A 1/2, Galle Road, Panadura</h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- this shows on dekstop screens -->
+
+        <!-- this shows on mobile screens -->
+        <div
+        class="container-fluid d-sm-block d-md-none text-white position-absolute top-0 start-50 translate-middle">
+        <div class="row">
+            <div class="row color-blue py-3 col-4">
+                <img class="d-none d-sm-none d-md-none d-lg-block big-icon col-md-3 col-lg-3 "
+                    src="/icet/assets/img/favicon/icons8-call-100.png" alt="">
+                <div class=" col-md-12 col-lg-8">
+                    <h6 class="lead pt-1">PHONE</h6>
+                        <h5 class="mt-1 mb-0 ">075 805 805</h5>
+                </div>
+            </div>
+            <div class="row color-green py-3 col-4">
+                <img class="d-none d-sm-none d-md-none d-lg-block big-icon col-4"
+                    src="/icet/assets/img/favicon/icons8-mail-100.png" alt="">
+                <div class="col-sm-12 col-md-12 col-lg-8">
+                    <h6 class="lead pt-1">EMAIL</h6>
+                    <h4 class="mt-1 mb-0">info@icet.lk</h4>
+                </div>
+            </div>
+            <div class="row color-blue py-3 col-4">
+                <img class="d-none d-sm-none d-md-none d-lg-block big-icon col-4"
+                    src="/icet/assets/img/favicon/icons8-location-96.png" alt="">
+                <div class="col-md-12 col-lg-8">
+                    <h6 class="lead small pt-1">LOCATION</h6>
+                    <h6 class="mt-1 mb-0">223 A 1/2, Galle Road, Panadura</h5>
+                </div>
+            </div>
+        </div>
+    </div>
+        <!-- this shows on mobile screens -->
+
+
+        <div class="container mt-4">
+            <div class="row">
+                <div class="col-md-6 col-sm-12 row">
+                    <div class="col-4">
+                        <img class=" col-12" src="./assets/img/LOGO DESIGN.png" alt="">
+                    </div>
+                    <div class="col-8">
+                        <div class="py-3">
+                            <br>
+                            <p>it's safe to say these guys have a great sense of humor, which isn't really suprising for
+                                us
+                                considering their seemingly absurd solution to online payments. Instead of chasing
+                                1000-hour
+                                programming contracts to</p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="col-md-6 col-sm-12 row">
+                    <div class="col-4">
+                        <h6 class="text-uppercase">Information</h6>
+                        <ul>
+                            <li>Test Link</li>
+                            <li>Test Link</li>
+                            <li>Test Link</li>
+                            <li>Test Link</li>
+                        </ul>
+                    </div>
+                    <div class="col-4">
+                        <h6 class="text-uppercase">Student Life</h6>
+                    </div>
+                    <div class="col-4">
+
+                        <h6 class="text-uppercase">Contact Us</h6>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <hr>
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="container">
+                        <div class="row my-4 mb-2">
+                            <div class="col-md-8">
+                                <h4>Have Any Questions?</h4>
+                                <p>Enter your email address and we will get back to you as soon as possible
+                                </p>
+                            </div>
+                            <div class="col-md-4">
+                                <form action="" method="post">
+                                    <div class="row">
+                                        <div class="col-md-8">
+                                            <input type="email" name="" class="form-control" id=""
+                                                placeholder="Enter email here">
+                                        </div>
+                                        <div class="col-md-4">
+                                            <button type="submit" class="btn btn-success">submit</button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12">
+                    <hr>
+                    div.row
+                    <p class="text-white color-blue py-3" style="font-size: smaller;"> &copy; 2024 iCET. All Rights
+                        Reserved
+
+                        <img class="object-fit-cover float-end icon m-1"
+                            src="/icet/assets/img/favicon/icons8-youtube.svg" alt="">
+                        <img class="object-fit-cover float-end icon" src="/icet/assets/img/favicon/icons8-instagram.svg"
+                            alt="">
+                        <img class="object-fit-cover float-end icon" src="/icet/assets/img/favicon/icons8-linkedin.svg"
+                            alt="">
+                        <img class="object-fit-cover float-end icon" src="/icet/assets/img/favicon/icons8-facebook.svg"
+                            alt="">
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
+</html>
