--- a/carosal.html
+++ b/carosal.html
@@ -4,19 +4,20 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Carousel</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/icet/assets/css/carosal.css">
 </head>
 
 <body>
-    
+
     <div id="carouselExampleControls" class="carousel">
         <div class="carousel-inner">
-            <div class="carousel-item active">
+            <div class="carousel-item active ">
                 <div class="card">
-                    <div class="img-wrapper"><img src="/icet/assets/img/drniroth.webp" class="d-block w-100" alt="..."> </div>
+                    <div class="img-wrapper"><img src="/icet/assets/img/drniroth.webp" class="d-block w-100 object-fit-cover"
+                            alt="..."> </div>
                     <div class="card-body">
                         <h5 class="card-title">Dr. Niroth Samarawickrama</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -26,9 +27,10 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item active col-3">
                 <div class="card">
-                    <div class="img-wrapper"><img src="/icet/assets/img/frank.webp" class="d-block w-100" alt="..."> </div>
+                    <div class="img-wrapper"><img src="/icet/assets/img/frank.webp" class="d-block w-100 img-fluid"
+                            alt="..."> </div>
                     <div class="card-body">
                         <h5 class="card-title">Mr. Frank Damiend</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -38,9 +40,10 @@
                     </div>
                 </div>
             </div>
-            <div class="carousel-item">
+            <div class="carousel-item  col-3">
                 <div class="card">
-                    <div class="img-wrapper"><img src="/icet/assets/img/mrsamila.jpg" class="d-block w-100" alt="..."> </div>
+                    <div class="img-wrapper"><img src="/icet/assets/img/mrsamila.jpg" class="d-block w-100" alt="...">
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">Mr. Samila</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -52,7 +55,8 @@
             </div>
             <div class="carousel-item">
                 <div class="card">
-                    <div class="img-wrapper"><img src="/icet/assets/img/prathiba.webp" class="d-block w-100" alt="..."> </div>
+                    <div class="img-wrapper"><img src="/icet/assets/img/prathiba.webp" class="d-block w-100" alt="...">
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">Ms. Prathibha</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -64,7 +68,8 @@
             </div>
             <div class="carousel-item">
                 <div class="card">
-                    <div class="img-wrapper"><img src="/icet/assets/img/ravindu.png" class="d-block w-100" alt="..."> </div>
+                    <div class="img-wrapper"><img src="/icet/assets/img/ravindu.png" class="d-block w-100" alt="...">
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">Mr. Ravindu</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
@@ -76,7 +81,8 @@
             </div>
             <div class="carousel-item">
                 <div class="card">
-                    <div class="img-wrapper"><img src="/icet/assets/img/hasindu.webp" class="d-block w-100" alt="..."> </div>
+                    <div class="img-wrapper"><img src="/icet/assets/img/hasindu.webp" class="d-block w-100" alt="...">
+                    </div>
                     <div class="card-body">
                         <h5 class="card-title">Mr. Hasindu</h5>
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
